// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input.Phone /> Snapshots should match with default input 1`] = `
.c1 {
  position: relative;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  width: 320px;
  height: 52px;
  padding-left: 12px;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
}

.c1:hover:not(:disabled),
.c1:focus-within:not(:disabled) {
  border-color: #231B22;
}

.c3 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c0 {
  box-sizing: border-box;
  width: 320px;
}

.c2 {
  --fieldset-left-offset: 12px;
  --dropdown-zIndex: 1;
  height: inherit;
}

.c2 .react-tel-input {
  box-sizing: border-box;
  position: relative;
  width: 100%;
  height: inherit;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
  display: grid;
  grid-template-areas: 'dropdown input';
  grid-template-columns: min-content 1fr;
}

.c2 .react-tel-input .special-label {
  position: absolute;
  top: -8px;
  display: block;
  background: white;
  padding: 0 4px;
  white-space: nowrap;
  font-size: 12px;
  color: #6B6B78;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c2 .react-tel-input:focus-within .special-label {
  color: #231B22;
}

.c2 .react-tel-input input[disabled] + .flag-dropdown:hover {
  cursor: not-allowed;
}

.c2 .react-tel-input .form-control {
  background: transparent;
  border: none;
  width: 100%;
  outline: none;
  grid-area: input;
  color: #231B22;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  padding-left: 12px;
}

.c2 .react-tel-input .form-control:disabled {
  cursor: not-allowed;
}

.c2 .react-tel-input .form-control::-webkit-input-placeholder {
  color: #6B6B78;
}

.c2 .react-tel-input .form-control::-moz-placeholder {
  color: #6B6B78;
}

.c2 .react-tel-input .form-control:-ms-input-placeholder {
  color: #6B6B78;
}

.c2 .react-tel-input .form-control::placeholder {
  color: #6B6B78;
}

.c2 .react-tel-input .form-control:hover,
.c2 .react-tel-input .form-control:focus {
  box-shadow: none;
}

.c2 .react-tel-input .form-control.open {
  z-index: calc(var(--dropdown-zIndex) + 1);
}

.c2 .react-tel-input .flag-dropdown {
  border: none;
  width: inherit;
  grid-area: dropdown;
}

.c2 .react-tel-input .flag-dropdown.open {
  width: 100%;
  z-index: var(--dropdown-zIndex);
}

.c2 .react-tel-input .flag-dropdown.open,
.c2 .react-tel-input .flag-dropdown.open .selected-flag,
.c2 .react-tel-input .flag-dropdown:hover,
.c2 .react-tel-input .flag-dropdown:focus {
  cursor: pointer;
  background: transparent;
}

.c2 .react-tel-input .selected-flag {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 52px;
  height: 100%;
  padding: 0;
  padding-left: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
}

.c2 .react-tel-input .selected-flag::after {
  content: '';
  position: absolute;
  background-color: #D7D7E0;
  height: 28px;
  right: -4px;
  width: 1px;
  top: 50%;
  -webkit-transform: translate(0,-50%);
  -ms-transform: translate(0,-50%);
  transform: translate(0,-50%);
}

.c2 .react-tel-input .selected-flag .flag {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .react-tel-input .selected-flag .flag .arrow {
  background-color: #6B6B78;
  -webkit-mask-image: url('data:image/svg+xml;utf8,%0A%20%20%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%2012%2012%22%3E%0A%20%20%20%20%3Cpath%20fill-rule=%22evenodd%22%20d=%22M3.146%204.146a.5.5%200%200%201%20.708%200L6%206.293l2.146-2.147a.5.5%200%200%201%20.708.708l-2.5%202.5a.5.5%200%200%201-.708%200l-2.5-2.5a.5.5%200%200%201%200-.708Z%22%20clip-rule=%22evenodd%22/%3E%0A%20%20%3C/svg%3E%0A');
  mask-image: url('data:image/svg+xml;utf8,%0A%20%20%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%2012%2012%22%3E%0A%20%20%20%20%3Cpath%20fill-rule=%22evenodd%22%20d=%22M3.146%204.146a.5.5%200%200%201%20.708%200L6%206.293l2.146-2.147a.5.5%200%200%201%20.708.708l-2.5%202.5a.5.5%200%200%201-.708%200l-2.5-2.5a.5.5%200%200%201%200-.708Z%22%20clip-rule=%22evenodd%22/%3E%0A%20%20%3C/svg%3E%0A');
  width: 16px;
  height: 16px;
  -webkit-transition: 0.6s,color 0.1s;
  transition: 0.6s,color 0.1s;
  position: relative;
  left: 28px;
}

.c2 .react-tel-input .selected-flag .flag .arrow.up {
  border: none;
  -webkit-transform: rotateX(180deg);
  -ms-transform: rotateX(180deg);
  transform: rotateX(180deg);
}

.c2 .react-tel-input .selected-flag .flag .arrow:hover,
.c2 .react-tel-input .selected-flag .flag .arrow:focus {
  border: none;
  background-color: #231B22;
}

.c2 .react-tel-input .flag {
  width: 20px;
  height: 20px;
  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAFAAAAA8CAYAAADxJz2MAAAAAXNSR0IArs4c6QAAEBZJREFUeF7NXHlwXMWZ//XoGB86ZnwIc1hostYBjrM+CCZYWTvYZCvYRIdZAnLIaljA2PEhkQXbRcUa7W7WmCRYSmxnnThItVhaUottTZBIeTEpREQKFz6mloA1EqyeBXb5nifJthgdr7e+N/NGb2bem3lvZli2/8Kj7l9//Xtf99f9/bph0CjLXNw2OHWwmnHLUg4+n4EVBKt5AAgc3H3yuZxmrbZav9U0LbONZ1iqYbEsZWDzOecyHgPzcMYFcMn9yzV/NIX37flPVN/rWLUUwHwAin0CAE96f4c762trDOOh/LANlozqfU8VLy2/1jvf91CtjDf9yH7PIT5LWPvr024c+q4mHosc8KKdg+WwsCZw2GITxAQOqT4ekRtal5czzpqAeHhcAHh9PCIVvG8VPmy7r+hhTRMn/aUB1r80CuC8nq0TYxO5+vVyBO3b+w9FeIh/hqur1sm409p/hdfYbVj/2x763AIwXh9JZBiBC386tItx1Bj1LKrHGVwnn82u12qzuXXFLskkHrPA9YtHj8bF+1bhw4hDYMAkxlxs7VVNvIGBgV3r9ntrWt+9KFeNTSBQtSQPO0686rq99aUQXojAhT8dqmMcLjPkKXUZYw3Hn82qVbfd9B8r6riUGJ6FoaGx6mhMPMMEBlhsYE9fDcM7U/VMXVr+za6srU/KHkYkxiIwSB7S8m9B9rYnG3Jzc2U8mcCFLw5WM8jTLPHCecWJLTltBLCx5b5qwKKJNyUdeGIOMDwOHOoHrvi1u+TMUrG76r908cwRSCO1VLC1V2Q8VP6+uqp0VtOO479DWv4sKCSWltg0p3BXt0ieJ5OXtfWJAOF/ulCBtgfbZAJ/8sZg3/WRUKBIiMSMNC7WlI477Ha7uKlleR+fCDwhvMJsYI0DmGYN/HTVD7QIQO+gZpdi2siYo8H5tiaeeQIhIpM7mFMUUdnRB/CCqtI8qEnsv/w5ZnV/FLYGni+5E7nbXwwnLzDlRUijDubz+aoZS9L7guPnnNduf2O1qOV937kV+M4tgODLgfvDv5JblM39BAX2QfzhLPCHcxokctSCSZp4pgkkeInXsqP/HoYXSeJI18kwAqWBIYx90DvhecH1MmhtLRHYxhgri+V21hsd4OAYmbIqpndyzt3bOx6ihTuEN90a8Lo52UBj1wLUtNPOY6I0PNiJzUtO4ewNYP/HUVPaDc7D8JSWCRHIuXtfwTFIUvh4S0tykPfeMWSWLpTJUkfh9HmFsORmg7yzyxs+VSzgbiaKYp9qHxU2OMv4JVhvtCNzuEP+fWTSMoxMXoXxDGXbFcWnsL3jIZEH9magKUvr3eR0QErLw/NdW+UGAzfG0HHqqmwUlb4tL8ueSFOaPPHYZQWXCwwshKfuLSECAeGyo03ko+OyfVpl9INeDG17Sf5T9o5aZMwr0nUa/rlfIAK5Xo300Q8xZeBFMOm6XIVIGM75IcYy5uqC/pg8kNbpfGDZTRPVRiavhNf/KPov+zEvfypyp6Sjq3sA61/uxTPfOCJ7oVJ0p7Sq1wQJhPfpPF3bE/lDfAIH94CNB/ZJnE3FDdtzhgik9Y7WPaVETt/SklzseOQryJ9hxcend+O+2V2hum9fCEToWOX/E4G6UzhtTJCncMbnb8tjIS/yT1kFKW2m3tg829/4O5tyVFs8IxA4KOr6/NMwre4HUe12PPoVbFn4L/JHGh4LrIO9Q0o1LjBmgYKnbpwggZ6LM1ptbJJVdw0a/aAHQ9t2BafwM8iYV6j7HVlGhsdwECEU/5SVMb1CK4gQeU/OAW6dAjS8uwC1r4cHkV0PdqJmySl8PAgcEAJbG1X5vwkixTnInzEJSsRVBxEi0N91EhcXL9YOIj6fr4YxFqA8ycI5d27vWG0Ds0ThKVPa1DYGklM+k2vgJeSBnDvZmwfojB+yj04YdAK59sJvkD6vGJbcrLAoTJH52gv7Md5/DtsWPSKfWCaK5CQPtDX8Ka1vVIp32I/N7tRMCM8/kOOQMy+Z6bQsRCUjNDfSfeopq+6DC79c85YuXgIECuxpnyOYeZHtU5M33n8eA//8LGadjt5Ik3dGk8gEHFrpkE8icgaGscPJOCAf586T2wIprg2vLC9nFm08mtKrZwOT04DffAJ53dMuklPJzGjhmSaQvE/JzJS/Xl71zZsOK55H5G1b9D3oHuW8IvY+Tl6q9sTzTsrMhJIJi14cagCwORESGUf98S3ZYYmIDa8sb2AWlhAel1C/+7GjMfFMEchZPVt3NQzP5/M1XN+5f7NCXtxkQmleiMTR/nP1jtaXZLywdNZdO4dcnKHOFIkSGk9szdZMgW14ZYWLWczhcbDG3WvejItnnEDWyJ6+qonXV/WM6/lFj9QZTmeV5mGPs7DRbreH8KISqoHMjKWODttxiBTBuVPJwOjVpcwMA6vTSi5EtBE5487dVW8FMiY6RcFbVvi9gjj5QBGMO9laMSYeZWaANHm8cfKBMh4OPhiGF0WgYneAyLSybCufP+QPkMnB6Gjl4XysUxqWmj0uu2jUW4MprjIGFChHPcaYwDn3gEudaaNSM2VejOK9e7qjeu7NS+jMHZXSz+xu6px8ur5ZzrwYLZW/r9731B1llexcwZW/fUo+6tlfaxDasuZ41v7a2wlptBltFVF42gQGNQIwthScDOQF4sulhClrDrTfs9vtxjWHQESuBhCpYcgaCwA3AMN4FOljaSLDh99y3+xcbRhP0UTycqxLLw6OqMcb0IBijDeaQJVGoP54QQLVPxFwvQEiywEY0ERkIilVHnPgRjQR2tNde2G/rNncgd6YeD6fr3zB1hNNEodt7+OF6Dh1Bb968xyMjjecwMp22mBqLrgagDKZjDFXbm6upuYQ3LCa0lgAWQZIShMJEhiwD9xVjB5NvH/93Ue7bp9prVmz+7Rct/25eWh994K8We49/jPNyS/1nwvDmyCwsoMWUjk008ZRSTUpKHoEBkkMaQSqXimaJ6SxAKAtVcKaiJpAsscCNBTBG4aH4HjVY6UMEaXaqHQf+pHu6qnGCxAoR6IJDYN26P1X/HK6yQiBcoDhvMJutysRita75DQWoAJAQppIJIFBT6woRo+MV7L+reru88NNNM6VC6Zj26t0MAFoCise+D8XW2KGn/Q5BRX5zTsCmoiiEdDXUEDpS3R5B2R3Jm+M5YHBnkTOuayJUI5UL0kb06rwPxKOg7QHLY0l1j5Qi0DCscLvcEAQF/2os+9E31ABkUfpNFrzqFBmiJyG1kGj42WR3rfu/ltkICqK3Ef/bQCQvLC22f5V8RP4k/U+uf9cpNUOtsw1rYnoEEiQteUb94rdZ4dD9lFy94P+QMJYPYWNjpehor0NDCENgzywaslNyJ9pxfrf9oamsUFA9wX7PWRLTI3FhBe69xy4zbQmEoNANzvzDupfO1NGM4scJX+6VZ7CuVPS5KxMa9cF2SPPTPpjfDPHJTfD6vZTgb1eoFCmWFn71F/HCIG0Z7pgW6ypYcS3RrOGsLdltmlNJAaBgvtgG/YcOVtAyxLNNvK6F9yB9Df9myQHmsKxgojKUoGhsl1XE1EPySCBOG9bnCBX2s32tMzW/EMCa6CMU1L5c0P2GSQQrBvFhgg01OsXUCnVBM4Sj6XUSiIwFRFTMYqOPnRsi5eIMDoIz97W/JDGom6UoAd6ZonHUmofEUh7o5Qt+sFBpgwv1UEk599cYJKUEvu4xeJm3bijBpBSo4lActofy7al2dJTgufvHXHu/P4005qIXhDhkJwM6bZUjpf1ocDmh1VTwzA6z4L1hBJ4HbxvmQ2j2pqIOTwusKLENBEdAmX7Uj1e+STyEYrKLUhSE4HkVDIf3Ls8aY0F5C1FgWu/ZjURLQLJ+xT7zu1qKk8vvD0pDWj8ks9JKbNQMqEbxQlrIhys/g50hyUOeM/yBiAxTQQc9aw4cU0kkkAt+0gTYSwx+4JpvGhN5DRKXAzcnCYCNJbAq5my4t4VLpjVWMAaWVFymkgEgbr2+Xw+l/TpeVPjtcyeFVsTOY2S6iCJ8bYiIgN3KhkOvfWN99BtVVYHjQuXEW1kjYUVJ6+JBAk0ZF+y49XVRAjYAlbGIYVpDgwWD4fUaYW/mTIbRgODTCSzlIHLe8TA0ZEzARbuAaROpEvNzJEaTeTavv/sHN3yE1P2KeMFpJBmQ0fTeOPVJJBuK5CGwUgTCRdt4moEWoQGI181A5YGBaXgOxEijwkSJHe81LsalzSRe14drF5w5HpK8Iw6gVa9KAJJc7h79rebvjtvbcx3IoNbfi5c3/dqXM3Bi6JyHrjAHufdCT3gia9hKJrI1w8O2u4+NJHw1RicIbxkyKO2YQQq7zoW3LYMlX+9ISb2wPp/wnBrR0zNoQfFuyQdjUUPPJaGoX538vWDg4hDoNxFLLxkyQsjUP2uwwyBBKKlOXhRRGJ6QpqIFl7kuxOjBOrZlwryQgRGvuswS2DwS4c0h2BkSyorzcBDeFrvTswQGGlfqsgLERipOSRCoFpzSFGGJ6RhaGkiZglU25dSArW+boIEkl21t/xiuujvHUvK+5QBWmys1lUyNUoToXuGSz/zY9qhIVw/OmyGj9oSeOnElbLCNh5Y3qZ+10HIkQRmel8Gz5qN0VvvD3WsBJEIS9zFXm0NIyGLOdyb3p94J0JvTujZBF0XVsro2TF8+tgljH6me9FQ3bW7BF66KZGywja1rDilXPZRUInAh2++i56Myj+lX3wPPDMH47Y75X/7v1qDK64jchSOKEJx72xRrbEkZykXNr8/8U6EHuzM+8SPK7snti+5FVORfms6Pn1MffVWt1c5I5OcTeGt2caWFVEpfcUDfX+uQUE/3fuZKEJ+Gez3NkDHA1Hco61hJGr0pvcnWu5cCIy4b+DijhFYV/4N/B3vwP4DC6b9fRZ67zprqIsSeHVPX4YAIirFJPCND5tg7W3CspELcrNjGdMhFj+JB+50fqkEXtqbiZn/3YaLt6/48gnc1Hp/X+Q7DMUDxeFL2PPOP+LzsYDwPCljKn74zZ/BNnmmHoGe4p58m4HLmUY/tmfzcRbSRCpnA0vGxyCUnQdYFsCvw+G+CdeP+XF+61UjmJ4SeBcYqWi0TtwgQiT+ua9dxrvXsUomj8qXEUToYvqWuUD25THcODaCqYszQevPp9+/BAomBkrqg8jGA/fVRL7DSHQbQ1nfvB/PsEnieEo0EWthuvP5aZOiNJGv2YC7z/gx/dAQrpnYxqiz0gbINlSFab3rSJDAL0Rz0Ht3ksBGOuURmBiWI1Kk5pAIgeqvm2qNRUsTMUvgF+F9IQKDJIbedZglUEtzSLXGEvnuxAyBWvYZmp8GKoXtiZR3HSYJ1NUcUq2xqN+dmCBQ1z4D/MStErWppLPxNxyr6h648/GYmshgzQ5xuPlwXE0kWc0hcgTKO5G7Dg4VxMkHGtJE4jIUp4Lurjz4P6OgKxATGsbEM4dOuk0fvI1qyIZENQc98I575lfPec9fZlbDMGSsiUr/C+U5BKMm6UjbAAAAAElFTkSuQmCC');
  background-repeat: no-repeat;
}

.c2 .react-tel-input .ar {
  background-position: 0px 0px;
}

.c2 .react-tel-input .br {
  background-position: -20px 0px;
}

.c2 .react-tel-input .cl {
  background-position: 0px -20px;
}

.c2 .react-tel-input .de {
  background-position: -20px -20px;
}

.c2 .react-tel-input .es {
  background-position: -20px -40px;
}

.c2 .react-tel-input .gb {
  background-position: -60px 0px;
}

.c2 .react-tel-input .ie {
  background-position: -40px 0px;
}

.c2 .react-tel-input .it {
  background-position: -40px -20px;
}

.c2 .react-tel-input .mx {
  background-position: 0px -40px;
}

.c2 .react-tel-input .pt {
  background-position: -40px -40px;
}

.c2 .react-tel-input .us {
  background-position: -60px -20px;
}

.c2 .react-tel-input .country-list {
  background-color: white;
  position: absolute;
  padding: 0;
  outline: none;
  overflow-y: scroll;
  list-style: none;
  max-height: 18rem;
  margin: -8px 0 0 calc(-1 * var(--fieldset-left-offset) - 1px);
  width: calc(100% + var(--fieldset-left-offset) + 2px);
  z-index: var(--dropdown-zIndex);
  border: 1px solid #231B22;
  border-top: 0;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c2 .react-tel-input .country-list::-webkit-scrollbar {
  display: none;
}

.c2 .react-tel-input .country-list .country {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: 0;
  padding: 12px 16px 12px 16px;
  color: #231B22;
}

.c2 .react-tel-input .country-list .country .flag {
  margin-right: 16px;
}

.c2 .react-tel-input .country-list .country .country-name {
  margin-right: 4px;
}

.c2 .react-tel-input .country-list .country .dial-code {
  color: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 .react-tel-input .country-list .country .dial-code::before {
  content: '(';
}

.c2 .react-tel-input .country-list .country .dial-code::after {
  content: ')';
}

.c2 .react-tel-input .country-list .country.highlight {
  background-color: transparent;
  color: #D8385E;
}

.c2 .react-tel-input .country-list .country.highlight::after {
  content: '';
  background-color: #D8385E;
  -webkit-mask-image: url('data:image/svg+xml;utf8,%0A%20%20%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%2012%2012%22%3E%0A%20%20%20%20%3Cpath%20fill-rule=%22evenodd%22%20d=%22M9.854%203.146a.5.5%200%200%201%200%20.708l-4.5%204.5a.5.5%200%200%201-.708%200l-2.5-2.5a.5.5%200%201%201%20.708-.708L5%207.293l4.146-4.147a.5.5%200%200%201%20.708%200Z%22%20clip-rule=%22evenodd%22/%3E%0A%20%20%3C/svg%3E%0A');
  mask-image: url('data:image/svg+xml;utf8,%0A%20%20%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%2012%2012%22%3E%0A%20%20%20%20%3Cpath%20fill-rule=%22evenodd%22%20d=%22M9.854%203.146a.5.5%200%200%201%200%20.708l-4.5%204.5a.5.5%200%200%201-.708%200l-2.5-2.5a.5.5%200%201%201%20.708-.708L5%207.293l4.146-4.147a.5.5%200%200%201%20.708%200Z%22%20clip-rule=%22evenodd%22/%3E%0A%20%20%3C/svg%3E%0A');
  width: 16px;
  height: 16px;
}

.c2 .react-tel-input .country-list .country.focus,
.c2 .react-tel-input .country-list .country:hover {
  background-color: #F5F5FA;
}

<div>
  <div
    class="c0"
  >
    <fieldset
      class="c1"
      label=""
      value=""
    >
      <div
        class="c2"
      >
        <div
          class=" react-tel-input "
        >
          <input
            class="form-control "
            placeholder="+55 (11) 999999999"
            type="tel"
            value="+55"
          />
          <div
            class="flag-dropdown "
          >
            <div
              aria-haspopup="listbox"
              class="selected-flag"
              role="button"
              tabindex="0"
              title="Brazil: + 55"
            >
              <div
                class="flag br"
              >
                <div
                  class="arrow"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <label
        class="c3"
      />
    </fieldset>
  </div>
</div>
`;

exports[`<Input.Phone /> Snapshots should match with disabled input 1`] = `
.c3 {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  outline: none;
  position: absolute;
  bottom: 0;
  left: 0;
  border: none;
  box-sizing: border-box;
  height: 52px;
  padding-top: 16px;
  padding-right: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #231B22;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
}

.c3:focus {
  color: #231B22;
}

.c3:focus ~ legend {
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  -webkit-transition-property: max-width;
  transition-property: max-width;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
}

.c3:focus ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size,color;
  -webkit-transition-property: transform,font-size,color;
  transition-property: transform,font-size,color;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
  font-weight: 400;
  color: #231B22;
}

.c3:focus::-webkit-input-placeholder {
  color: #6B6B78;
}

.c3:focus::-moz-placeholder {
  color: #6B6B78;
}

.c3:focus:-ms-input-placeholder {
  color: #6B6B78;
}

.c3:focus::placeholder {
  color: #6B6B78;
}

.c3:disabled {
  cursor: not-allowed;
  color: #D7D7E0;
  -webkit-text-fill-color: #D7D7E0;
  opacity: 1;
}

.c3::-webkit-input-placeholder {
  color: #6B6B78;
}

.c3::-moz-placeholder {
  color: #6B6B78;
}

.c3:-ms-input-placeholder {
  color: #6B6B78;
}

.c3::placeholder {
  color: #6B6B78;
}

.c3[type="number"]::-webkit-outer-spin-button,
.c3[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c3:invalid {
  box-shadow: none;
}

.c2 {
  position: relative;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  width: 320px;
  height: 52px;
  padding-left: 12px;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
  border-color: #D7D7E0;
}

.c2:hover:not(:disabled),
.c2:focus-within:not(:disabled) {
  border-color: #231B22;
}

.c6 {
  position: relative;
  padding: 0;
  max-width: 0;
  width: auto;
  height: 0;
  font-weight: normal;
  visibility: hidden;
  -webkit-transition-property: max-width,padding;
  transition-property: max-width,padding;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-transition-duration: 100ms;
  transition-duration: 100ms;
}

.c7 {
  padding-left: 4px;
  padding-right: 4px;
}

.c5 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  color: #D7D7E0;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
}

.c4 {
  padding-right: 40px;
}

.c0 {
  position: relative;
  display: inline-block;
}

.c8 {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 16px;
  padding-left: 8px;
  height: 52px;
  cursor: pointer;
  outline: none;
  cursor: not-allowed;
  pointer-events: none;
}

.c8:hover svg,
.c8:focus svg {
  fill: #231B22;
}

.c8 svg {
  height: 52px;
  width: 20px;
  fill: #6B6B78;
  fill: #F5F5FA;
  pointer-events: none;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <fieldset
        class="c2"
        disabled=""
        label="Label"
        value=""
      >
        <input
          aria-invalid="false"
          aria-label="Label"
          class="c3 c4"
          disabled=""
          label="Label"
          type="password"
          value=""
        />
        <label
          class="c5"
          disabled=""
        >
          Label
        </label>
        <legend
          class="c6"
        >
          <span
            class="c7"
          >
            Label
          </span>
        </legend>
      </fieldset>
    </div>
    <div
      class="c8"
      disabled=""
      role="button"
    >
      <svg
        height="20"
        width="20"
      />
    </div>
  </div>
</div>
`;

exports[`<Input.Phone /> Snapshots should match with error 1`] = `
.c2 {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  outline: none;
  position: absolute;
  bottom: 0;
  left: 0;
  border: none;
  box-sizing: border-box;
  height: 52px;
  padding-top: 16px;
  padding-right: 52px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #231B22;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
}

.c2:focus {
  color: #231B22;
}

.c2:focus ~ legend {
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  -webkit-transition-property: max-width;
  transition-property: max-width;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
}

.c2:focus ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size,color;
  -webkit-transition-property: transform,font-size,color;
  transition-property: transform,font-size,color;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
  font-weight: 400;
  color: #CA4808;
}

.c2:focus::-webkit-input-placeholder {
  color: #6B6B78;
}

.c2:focus::-moz-placeholder {
  color: #6B6B78;
}

.c2:focus:-ms-input-placeholder {
  color: #6B6B78;
}

.c2:focus::placeholder {
  color: #6B6B78;
}

.c2:disabled {
  cursor: not-allowed;
  color: #D7D7E0;
  -webkit-text-fill-color: #D7D7E0;
  opacity: 1;
}

.c2::-webkit-input-placeholder {
  color: #6B6B78;
}

.c2::-moz-placeholder {
  color: #6B6B78;
}

.c2:-ms-input-placeholder {
  color: #6B6B78;
}

.c2::placeholder {
  color: #6B6B78;
}

.c2[type="number"]::-webkit-outer-spin-button,
.c2[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c2:invalid {
  box-shadow: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 4px;
  color: #CA4808;
}

.c7 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  color: currentColor;
  font-size: 12px;
}

.c1 {
  position: relative;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  width: 320px;
  height: 52px;
  padding-left: 12px;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #CA4808;
}

.c1:hover:not(:disabled),
.c1:focus-within:not(:disabled) {
  border-color: #CA4808;
}

.c4 {
  position: relative;
  padding: 0;
  max-width: 0;
  width: auto;
  height: 0;
  font-weight: normal;
  visibility: hidden;
  -webkit-transition-property: max-width,padding;
  transition-property: max-width,padding;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-transition-duration: 100ms;
  transition-duration: 100ms;
}

.c5 {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c0 {
  box-sizing: border-box;
  width: 320px;
}

<div>
  <div
    class="c0"
  >
    <fieldset
      class="c1"
      label="Label"
      value=""
    >
      <input
        aria-invalid="true"
        aria-label="Label"
        class="c2"
        label="Label"
        value=""
      />
      <label
        class="c3"
      >
        Label
      </label>
      <legend
        class="c4"
      >
        <span
          class="c5"
        >
          Label
        </span>
      </legend>
    </fieldset>
    <div
      class="c6"
    >
      <span
        aria-live="polite"
        class="c7"
      >
        Error message
      </span>
    </div>
  </div>
</div>
`;

exports[`<Input.Phone /> Snapshots should match with full width 1`] = `
.c3 {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  outline: none;
  position: absolute;
  bottom: 0;
  left: 0;
  border: none;
  box-sizing: border-box;
  height: 52px;
  padding-top: 16px;
  padding-right: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #231B22;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
}

.c3:focus {
  color: #231B22;
}

.c3:focus ~ legend {
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  -webkit-transition-property: max-width;
  transition-property: max-width;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
}

.c3:focus ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size,color;
  -webkit-transition-property: transform,font-size,color;
  transition-property: transform,font-size,color;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
  font-weight: 400;
  color: #231B22;
}

.c3:focus::-webkit-input-placeholder {
  color: #6B6B78;
}

.c3:focus::-moz-placeholder {
  color: #6B6B78;
}

.c3:focus:-ms-input-placeholder {
  color: #6B6B78;
}

.c3:focus::placeholder {
  color: #6B6B78;
}

.c3:disabled {
  cursor: not-allowed;
  color: #D7D7E0;
  -webkit-text-fill-color: #D7D7E0;
  opacity: 1;
}

.c3::-webkit-input-placeholder {
  color: #6B6B78;
}

.c3::-moz-placeholder {
  color: #6B6B78;
}

.c3:-ms-input-placeholder {
  color: #6B6B78;
}

.c3::placeholder {
  color: #6B6B78;
}

.c3[type="number"]::-webkit-outer-spin-button,
.c3[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c3:invalid {
  box-shadow: none;
}

.c2 {
  position: relative;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  width: 100%;
  height: 52px;
  padding-left: 12px;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
}

.c2:hover:not(:disabled),
.c2:focus-within:not(:disabled) {
  border-color: #231B22;
}

.c6 {
  position: relative;
  padding: 0;
  max-width: 0;
  width: auto;
  height: 0;
  font-weight: normal;
  visibility: hidden;
  -webkit-transition-property: max-width,padding;
  transition-property: max-width,padding;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-transition-duration: 100ms;
  transition-duration: 100ms;
}

.c7 {
  padding-left: 4px;
  padding-right: 4px;
}

.c5 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c1 {
  box-sizing: border-box;
  width: 100%;
}

.c4 {
  padding-right: 40px;
}

.c0 {
  position: relative;
  display: inline-block;
  width: 100%;
}

.c8 {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 16px;
  padding-left: 8px;
  height: 52px;
  cursor: pointer;
  outline: none;
}

.c8:hover svg,
.c8:focus svg {
  fill: #231B22;
}

.c8 svg {
  height: 52px;
  width: 20px;
  fill: #6B6B78;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <fieldset
        class="c2"
        label="Label"
        value=""
      >
        <input
          aria-invalid="false"
          aria-label="Label"
          class="c3 c4"
          label="Label"
          type="password"
          value=""
        />
        <label
          class="c5"
        >
          Label
        </label>
        <legend
          class="c6"
        >
          <span
            class="c7"
          >
            Label
          </span>
        </legend>
      </fieldset>
    </div>
    <div
      class="c8"
      role="button"
      tabindex="0"
    >
      <svg
        height="20"
        width="20"
      />
    </div>
  </div>
</div>
`;
